@@ -3,7 +3,7 @@ AC_INIT(dcfldd.c)
 AM_CONFIG_HEADER(config.h)
 AC_CANONICAL_HOST
 
-AM_INIT_AUTOMAKE([dcfldd], [1.2.2])
+AM_INIT_AUTOMAKE([dcfldd], [1.2.3])
 
 AC_PROG_CC
 AC_PROG_CPP
