@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.35.
-.TH DCFLDD "1" "May 2005" "dcfldd (dcfldd) 1.2.2" "User Commands"
+.TH DCFLDD "1" "May 2005" "dcfldd (dcfldd) 1.2.3" "User Commands"
 .SH NAME
-dcfldd \- manual page for dcfldd (dcfldd) 1.2.2
+dcfldd \- manual page for dcfldd (dcfldd) 1.2.3
 .SH SYNOPSIS
 .B dcfldd
 [\fIOPTION\fR]...
@@ -31,6 +31,10 @@ write BYTES bytes at a time
 .TP
 of=FILE
 write to FILE instead of stdout
+.IP
+NOTE: of=FILE may be used several times to write
+.IP
+output to multiple files simultaneously
 .TP
 seek=BLOCKS
 skip BLOCKS obs\-sized blocks at start of output
@@ -38,7 +42,7 @@ skip BLOCKS obs\-sized blocks at start of output
 skip=BLOCKS
 skip BLOCKS ibs\-sized blocks at start of input
 .TP
-pattern=BYTES
+pattern=HEX
 use the specified binary pattern as input
 .TP
 textpattern=TEXT
@@ -75,6 +79,23 @@ gives you a percentage indicator)
 WARNING: Read the manual before using this
 .IP
 option.
+.TP
+split=BYTES
+write every BYTES amount of data to a new file
+.IP
+This operation applies to any of=FILE that follows
+.TP
+splitformat=TEXT
+the file extension format for split operation.
+.IP
+you may use any number of 'a' or 'n' in any combo
+NOTE: The split and splitformat options take effect
+.IP
+only for output files specified AFTER these
+options appear in the command line.  Likewise,
+you may specify these several times for
+for different output files within the same
+command line.
 .TP
 vf=FILE
 verify that FILE matches the specified input
