@@ -18,6 +18,8 @@
    Copied largely from GNU C's cccp.c.
    */
 
+#include "dcfldd.h"
+
 #if HAVE_CONFIG_H
 # include <config.h>
 #endif
